<?xml version="1.0"?>
<package format="2">
  <name>multi_rtsp</name>
  <version>0.0.1</version>
  <description>The multi_rtsp package</description>

  <maintainer email="grayfalcon@foxmail.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>